Update MonitorUserMangTest.java